kubernetes/robo/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test

---
apiVersion: v1
kind: Namespace
metadata:
  name: proc
