kubernetes/robo/sso-front.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: sso-front
spec:
  replicas: 2
  template:
    metadata:
      labels:
         app: sso-front
    spec:
      containers:
        - name: sso-front
          image: robo2025/sso-front:dev
          imagePullPolicy: Always
          ports:
            - containerPort: 80

---
apiVersion: v1
kind: Service
metadata:
  name: sso-front
  labels:
    app: sso-front
spec:
  type: NodePort
  ports:
    -  port: 9000
       targetPort: 80
       nodePort: 30005
  selector:
    app: sso-front
