kubernetes/robo/go-ssoserver.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: supplier
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
    - http:
        paths:
          - path: /supplier
            backend:
               serviceName: supplier
               servicePort: 80
